# aocbench

./: .gitignore  MANIFEST.in  README.md  aoc_bench.py  pyproject.toml
aocb/: cli.py  cli.py.bak  convert_problems.py  create_task.py  defaults.py  docs.py  download.py  download_inputs.py  download_problems.py  environment.py  init.py  rubric.py  submit.py  submit_answers.py  task.py
docs/: Docs.lean  lake-manifest.json  lakefile.toml  lean_reference.md
environments/aoc_bench/: README.md  aoc_bench.py  pyproject.toml
examples/Sonnet45_2025_14/: Main.lean  README.md  Sonnet45202514.lean  lake-manifest.json  lakefile.toml
examples/Sonnet45_2025_14/Sonnet45202514/: Input.lean
prompts/: intro.txt  system.txt
solutions/: run_all.sh  test_2024_format.py  test_2024_import.py
solutions/2015/python/: day02.py  day06.py  day07.py  day08.py  day09.py  day10.py  day12.py  day13.py  day14.py  day16.py  day18.py  day19.py  day21.py  day22.py  day_01.py  day_02.py  day_03.py  day_04.py  day_05.py  day_06.py  day_07.py  day_08.py  day_09.py  day_10.py  day_11.py  day_12.py  day_13.py  day_14.py  day_15.py  day_16.py  day_17.py  day_18.py  day_19.py  day_20.py  day_21.py  day_22.py  day_23.py  day_24.py  day_25.py
solutions/2016/python/: day_01.py  day_02.py  day_03.py  day_03_numpy.py  day_04.py  day_05.py  day_06.py  day_07.py  day_08.py  day_09.py  day_10.py  day_11.py  day_12.py  day_12_literal.py  day_13.py  day_14.py  day_15.py  day_16.py  day_17.py  day_18.py  day_19.py  day_20.py  day_21.py  day_22.py  (+4 more)
solutions/2024/: README.md
training/: train_aoc_bench.py
(+148 files in other folders)
