[project]
name = "advent-of-code-bench"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jinja2>=3.1.6",
    "numpy>=2.3.3",
    "verifiers>=0.1.4",
]

[tool.setuptools.packages.find]
include = ["aocb*"]
exclude = ["extras*", "tests*", "docs*", "examples*"]
