[project]
name = "aoc-bench"
description = "Your environment description here"
tags = ["placeholder-tag", "train", "eval"]
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "aocd>=0.1",
    "jinja2>=3.1.6",
    "verifiers>=0.1.4",
    "click>=8.0",
]

[project.scripts]
aocbench = "aocb.cli:aocbench"

[tool.hatchling.build.targets.wheel]
packages = ["aocb"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
