[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aocbench"
description = "A Lean4 benchmarking environment for Advent of Code problems"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "aocd>=0.1",
    "jinja2>=3.1.6",
    "verifiers>=0.1.4",
    "click>=8.0",
]

[project.scripts]
aocbench = "aocb.cli:aocbench"

[tool.setuptools]
packages = ["aocb"]
py-modules = ["aoc_bench"]

[tool.setuptools.package-data]
aocb = ["data/**/*"]
